fix: Update deprecated methods